# NanoAI-Runtime-SDK

./: .gitignore  CMakeLists.txt  DESIGN.md  DOCUMENTATION.md  LICENSE  MONETIZATION.md  README.md  ROADMAP.md  learnings.txt
.github/workflows/: publish.yml
agents/memory/: agent_memory.cpp  agent_memory.h
agents/orchestration/: agent_framework.cpp  agent_framework.h  swarm_engine.cpp  swarm_engine.h
agents/research/: research_agent.cpp
agents/vision/: vision_agent.cpp
backends/huawei/: ascend_backend.h
benchmark/: benchmark_suite.cpp  benchmark_suite.h
ci/github_actions/: publish.yml
ci/tests/: nrx_smoke_test.py
cluster/discovery/: discovery.cpp  discovery_service.cpp  discovery_service.h
cluster/fault_tolerance/: failover_manager.cpp  failover_manager.h  heartbeat.h
cluster/networking/: mesh_network.cpp  mesh_network.h
cluster/node/: cluster_manager.cpp  cluster_manager.h
cluster/node_manager/: cluster_manager.cpp  cluster_manager.h
cluster/replication/: model_replicator.cpp  model_replicator.h
cluster/synchronization/: load_migrator.cpp  load_migrator.h  mesh_network.cpp  mesh_network.h  state_sync.cpp  state_sync.h
cluster/workload_manager/: load_migrator.cpp  load_migrator.h  workload_manager.cpp  workload_manager.h
core/: CMakeLists.txt
core/agents/: agent_framework.cpp  agent_framework.h  swarm_engine.cpp
core/events/: event_bus.cpp  event_bus.h
core/hardware/: hal.cpp
core/hardware/balancing/: load_balancer.cpp  load_balancer.h
core/hardware/discovery/: hal.cpp  hal.h
core/hardware/monitoring/: hardware_monitor.cpp  hardware_monitor.h
core/hardware/profiling/: profiler.cpp  profiler.h
core/include/nanoai/: ai_task.h  distributed.h  model_conversion.h  runtime.h
core/logging/: logger.cpp  logger.h
core/memory/: memory_manager.h
core/memory/allocator/: memory_manager.cpp  memory_manager.h
core/memory/cache/: model_cache.cpp  model_cache.h
core/memory/cleanup/: garbage_collector.cpp  garbage_collector.h
core/memory/compression/: weight_compressor.cpp  weight_compressor.h
core/memory/paging/: virtual_memory.h
core/plugins/: plugin_manager.cpp  plugin_manager.h
core/runtime/: c_api.cpp  os_layer.h  runtime.cpp  workflow_engine.cpp  workflow_engine.h
core/runtime/config/: config_manager.cpp  config_manager.h  settings.json
core/runtime/dispatcher/: dispatcher.cpp  dispatcher.h
core/runtime/engine/: runtime.cpp  runtime_engine.cpp  runtime_engine.h  state_store.cpp  state_store.h
core/runtime/executor/: executor.h  os_layer.cpp  task_executor.cpp  task_executor.h
core/runtime/pipelines/: pipeline_executor.cpp  workflow_engine.cpp  workflow_engine.h
core/runtime/scheduler/: parallel_scheduler.cpp
core/runtime/workers/: inference_worker.cpp  inference_worker.h  worker_pool.cpp  worker_pool.h
core/scheduler/: parallel_scheduler.cpp  parallel_scheduler.h
core/security/encryption/: vault.h
core/security/permissions/: permission_manager.cpp  permission_manager.h
core/security/sandbox/: security_manager.cpp  security_manager.h
core/security/verification/: integrity_checker.cpp  integrity_checker.h
core/src/: backend.h  runtime.cpp  test_runtime.cpp
core/src/acceleration/: cpu_info.cpp  cpu_info.h  device.h  selector.cpp  selector.h
core/src/backends/: apu_backend.h  cuda_backend.h  directml_backend.h  gguf_backend.h  hexagon_backend.h  metal_backend.h  onnx_backend.h  opencl_backend.h  openvino_backend.h  pytorch_backend.h  tflite_backend.h  tpu_backend.h  vulkan_backend.h
core/src/conversion/: converter.cpp  converter.h
core/src/memory/: optimizer.h
core/src/networking/: network_manager.cpp  network_manager.h
core/src/service/: os_service.cpp  os_service.h
core/telemetry/: telemetry_manager.cpp  telemetry_manager.h
core/tests/: test_comprehensive_routing.cpp  test_hardware_exposure.cpp
dashboard/frontend/: index.html
desktop/linux/: README.md
desktop/macos/: README.md
desktop/windows/: README.md
docs/: LEARNINGS.md
docs/api/: DOCUMENTATION.md
docs/architecture/: ARCHITECTURE.md  BACKENDS.md
docs/roadmap/: ROADMAP.md
examples/: full_system_test.cpp  launch_demo_ultimate.cpp  launch_demo_v2.cpp  test_runtime_v2.cpp
examples/coding_ai/: coding_plugin.cpp
examples/medical_ai/: medical_plugin.cpp
formats/: format_detector.cpp  format_detector.h
landing/: index.html
mobile/android_app/: README.md
mobile/ios_app/: README.md
models/benchmarking/: benchmarker.cpp  benchmarker.h
models/converters/: model_converter.cpp  model_converter.h
models/loaders/: model_loader.h
models/metadata/: model_metadata.cpp  model_metadata.h
models/optimization/: quantizer.h
models/quantization/: ptq_manager.cpp  ptq_manager.h  quantizer_impl.cpp
models/registry/: model_registry.cpp  model_registry.h  registry.cpp  registry.h
models/validators/: model_validator.cpp  model_validator.h
plugins/loader/: plugin_loader.h
plugins/manager/: plugin_manager.h
plugins/marketplace/: marketplace.cpp  marketplace.h
scheduler/battery_aware/: battery_governor.cpp  battery_governor.h
scheduler/cost_aware/: cost_optimizer.h
scheduler/distributed/: distributed_scheduler.h
scheduler/hardware_aware/: autonomous_governance.h  hardware_aware_scheduler.cpp
scheduler/priority/: priority_queue.h
scheduler/thermal_aware/: thermal_governor.cpp  thermal_governor.h
sdk/go/: go.mod  nanoai.go
sdk/java/: pom.xml
sdk/nodejs/: binding.gyp  index.js  package-lock.json  package.json  test_v2.js
sdk/python/: README.md  pyproject.toml  test_nrx_ultimate.py  test_v2.py
sdk/python/nanoai/: __init__.py  runtime.py
sdk/rust/: Cargo.toml  build.rs
sdk/rust/examples/: test_v2.rs
sdk/rust/src/: lib.rs
sdk/wasm/: nanoai_wasm.js
sdks/android/: build.gradle
sdks/cpp/: example.cpp
sdks/java/: build.gradle
sdks/python/: setup.py  test_hw.py  test_runtime.py
sdks/rust/: Cargo.toml  build.rs
sdks/rust/examples/: test_runtime.rs  verify.rs
sdks/rust/src/: lib.rs
website/blog/: index.html
website/homepage/: index.html
website/sponsors/: hall_of_fame.json  (+1 more)
(+25 files in other folders)
