cmake_minimum_required(VERSION 3.10)
project(nanoai_ultimate)
set(CMAKE_CXX_STANDARD 17)
include_directories(core/include core/hardware core/scheduler core/agents core/telemetry core/runtime core/plugins core/memory core/security cluster/node cluster/discovery cluster/synchronization models/registry)
file(GLOB_RECURSE SOURCES "core/*.cpp" "cluster/*.cpp" "models/registry/*.cpp")
add_library(nanoai SHARED ${SOURCES})
add_executable(nanoai_ultimate examples/launch_demo_ultimate.cpp)
target_link_libraries(nanoai_ultimate nanoai pthread)

add_executable(full_system_test examples/full_system_test.cpp)
target_link_libraries(full_system_test nanoai pthread)

if(DEFINED ENV{JAVA_HOME})
  include(FindJNI)
  if(JNI_FOUND)
    message(STATUS "JNI found, adding JNI bridge to nanoai library")
    target_sources(nanoai PRIVATE sdk/android/jni/nanoai_jni.cpp)
    target_include_directories(nanoai PRIVATE ${JNI_INCLUDE_DIRS})
  endif()
endif()
