[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoai"
version = "0.1.0"
description = "NanoAI Runtime Python SDK"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }

[tool.setuptools.packages.find]
where = ["."]
include = ["nanoai*"]
