[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoai"
version = "0.1.0"
description = "NanoAI Runtime Python SDK"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "NanoAI" }]
keywords = ["ai", "runtime", "offline", "bindings"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/abdulraheemnohri/NanoAI-Runtime-SDK"
Repository = "https://github.com/abdulraheemnohri/NanoAI-Runtime-SDK"

[tool.setuptools.packages.find]
where = ["."]
include = ["nanoai*"]
