[package]
name = "nanoai"
version = "1.0.0"
edition = "2021"
authors = ["NanoAI Team"]
description = "Universal offline AI runtime SDK for Rust"
license = "Apache-2.0"
repository = "https://github.com/abdulraheemnohri/NanoAI-Runtime-SDK"
readme = "../../README.md"
build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
